# MIST-global-signal

./: .gitignore  linearized_linlog.ipynb  lst_bins.ipynb  nfg_sweep.ipynb  read_hdf5.py  setup.cfg  single_lstbin.ipynb  single_spec.ipynb  time_bins2.ipynb
mistsim/: __init__.py  lstbin.py  sampler.py  utils.py
notebooks/: bic_test.ipynb  fitting-2.ipynb  fitting-24hr.ipynb  fitting-pymc.ipynb  fitting.ipynb  fitting_poco.ipynb  linear_nfg_sweep.ipynb  nfg_sweep.ipynb  nfg_sweep_results.ipynb  noise_test.ipynb  raul_comp.ipynb
notebooks/attic/: bic_test.ipynb
notebooks/ideas/: fg_model_comp.ipynb
scripts/: simulator.py
src/: __init__.py  lstbin.py  nfg_sweep.py  sampler.py  utils.py
