[metadata]
name = mistsim
version = 0.0.1
long_description = file: README.md
author = Christian Hellum Bye
author_email = chbye@berkeley.edu
license = MIT
url = https://github.com/christianhbye/MIST-global-signal
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy


[options]
python_requires = >= 3.10
packages=find:
install_requires =
    corner
    h5py
    jupyter
    matplotlib
    numpy < 1.26
    pocomc

[options.extras_require]
dev = 
    black
    build
    flake8
    pytest
    pytest-cov
    twine

[flake8]
ignore = E203, W503
per-file-ignores =
    __init__.py:F401
max-line-length = 79
